test/conformance/kuttl/validate/clusterpolicy/standard/psa/test-deletion-request/02-resources.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: manifests.yaml
  shouldFail: false
