test/conformance/kuttl/validate/clusterpolicy/standard/psa/test-deletion-request/03-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: apps/v1
  kind: DaemonSet
  name: test-deletion-request-datadog-operator
  namespace: cpol-validate-psa-test-deletion-request
