test/conformance/kuttl/validate/clusterpolicy/standard/psa/test-deletion-request/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-psa-policy-test-deletion
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
